--- a/V2.0/alerta.css
+++ b/V2.0/alerta.css
@@ -179,6 +179,117 @@
 
 }
 
+@media screen and (max-width: 1368px) {
+    #header {
+        height: 75px;
+    }
+
+    .h1 {
+        padding-top: 40px;
+    }
+
+    .p {
+        font-size: x-large;
+    }
+
+    .p3 {
+        margin-left: 50px;
+        width: 50%;
+    }
+
+    .p4 {
+        font-size: x-large;
+    }
+
+    .p5 {
+        margin-top: 20px;
+        font-size: large;
+    }
+
+    .div2 {
+        margin-top: 90px;
+        margin-left: 70px;
+    }
+
+    .div5 {
+        padding-left: 68.5%;
+        margin-top: -50px;
+    }
+
+    .div6 {
+        height: 720px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 1180px) {
+    #header {
+        height: 75px;
+    }
+
+    .h1 {
+        padding-top: 40px;
+    }
+
+    .p {
+        font-size: x-large;
+    }
+
+    .p3 {
+        margin-left: 50px;
+        width: 50%;
+    }
+
+    .p4 {
+        font-size: x-large;
+        margin-left: 39.5%;
+    }
+
+    .p5 {
+        margin-top: 20px;
+        font-size: large;
+    }
+
+    .div2 {
+        width: 12%;
+        margin-top: 90px;
+        margin-left: 70px;
+    }
+
+    .div4 {
+        width: 35%;
+    }
+
+    .div5 {
+        padding-left: 65%;
+    }
+
+    .div6 {
+        margin-left: 63.5%;
+        width: 32%;
+        height: 745px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
 @media screen and (max-width: 1142px) {
 
     #header {
@@ -238,6 +349,65 @@
 
 }
 
+@media screen and (max-width: 1114px) {
+
+    #header {
+        height: 75px;
+    }
+
+    .h1 {
+        padding-top: 40px;
+    }
+
+    .p {
+        font-size: x-large;
+    }
+
+    .p3 {
+        margin-left: 35px;
+        width: 52%;
+    }
+
+    .p4 {
+        font-size: x-large;
+        margin-left: 43%;
+    }
+
+    .p5 {
+        margin-top: 20px;
+        font-size: large;
+    }
+
+    .div2 {
+        width: 13%;
+        margin-top: 90px;
+        margin-left: 70px;
+    }
+
+    .div4 {
+        width: 38.5%;
+    }
+
+    .div5 {
+        padding-left: 64%;
+        margin-top: -50px;
+    }
+
+    .div6 {
+        height: 800px;
+    }
+
+    .div4 iframe {
+        width: 440px;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
 @media screen and (max-width: 1024px) {
 
     .p3 {
@@ -257,7 +427,7 @@
     }
 
     .div6 {
-        height: 850px;
+        height: 800px;
         margin-left: 64%;
     }
 
@@ -283,10 +453,24 @@
         width: 85%;
     }
 
+    .p4 {
+        margin-left: 31%;
+    }
+
     .div2 {
-        width: 14%;
+        width: 16%;
         margin-top: 50px;
         margin-left: 50px;
+    }
+
+    .div3 {
+        width: 70%;
+    }
+
+    .div4 {
+        margin-left: 8%;
+        width: 60%;
+        height: 350px;
     }
 
     .div5 {
@@ -295,16 +479,20 @@
     }
 
     .div6 {
-        height: 850px;
-        margin-left: 64%;
+        height: 670px;
+        width: 49%;
+        margin-left: 26%;
+        margin-top: 95%;
     }
 
     .div7 {
-        margin-left: -40px;
+        margin-left: 20%;
+        margin-top: 40%;
     }
 
     .div4 iframe {
-        width: 410px;
+        width: 100%;
+        height: 350px;
     }
 
     .div5 iframe {
@@ -431,6 +619,38 @@
 
 }
 
+@media screen and (max-width: 820px) {
+
+    .p4 {
+        margin-left: 7%;
+    }
+
+    .div2 {
+        width: 17%;
+    }
+
+    .div4 {
+        margin-left: 9.5%;
+    }
+
+    .div5 {
+        padding-left: 30%;
+        margin-top: 22%;
+    }
+
+    .div6 {
+        width: 52%;
+        height: 685px;
+        margin-left: 25%;
+        margin-top: 105%;
+    }
+
+    .div7 {
+        margin-left: 20%;
+    }
+
+}
+
 @media screen and (max-width: 768px) {
 
     .p3 {
@@ -440,7 +660,7 @@
 
     .p4 {
         width: 100%;
-        margin-left: 35%;
+        margin-left: 12%;
     }
 
     .div2 {
@@ -455,14 +675,15 @@
     }
 
     .div4 {
-        width: 55%;
+        width: 70%;
+        margin-left: 6.5%;
     }
 
     .div6 {
         width: 70%;
         height: 555px;
         margin-left: 15%;
-        margin-top: 104%;
+        margin-top: 109%;
     }
 
     .div7 {
@@ -471,7 +692,7 @@
     }
 
     .div4 iframe {
-        width: 358px;
+        width: 100%;
     }
 
     .div5 iframe {
@@ -531,6 +752,56 @@
 
 }
 
+@media screen and (max-width: 720px) {
+
+    .p3 {
+        margin-left: 20px;
+        width: 80%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 11%;
+    }
+
+    .div2 {
+        width: 18%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div5 {
+        padding-left: 27%;
+        margin-top: 250px;
+    }
+
+    .div4 {
+        width: 70%;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 600px;
+        margin-left: 15%;
+        margin-top: 125%;
+    }
+
+    .div7 {
+        margin-top: 390px;
+        margin-left: 105px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
 @media screen and (max-width: 667px) {
 
     .p3 {
@@ -573,6 +844,57 @@
 
     .div4 iframe {
         width: 395px;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 540px) {
+
+    .p3 {
+        margin-left: 10px;
+        width: 90%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 15%;
+    }
+
+    .div2 {
+        width: 26%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div5 {
+        padding-left: 18%;
+        margin-top: 280px;
+    }
+
+    .div4 {
+        width: 70%;
+        margin-left: 45px;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 735px;
+        margin-left: 15%;
+        margin-top: 170%;
+    }
+
+    .div7 {
+        margin-top: 400px;
+        margin-left: 50px;
+    }
+
+    .div4 iframe {
+        width: 100%;
     }
 
     .div5 iframe {
@@ -683,7 +1005,7 @@
         width: 78%;
         height: 785px;
         margin-left: 11%;
-        margin-top: 185%;
+        margin-top: 200%;
     }
 
     .div7 {
