--- a/V2.0/alerta.css
+++ b/V2.0/alerta.css
@@ -349,6 +349,65 @@
 
 }
 
+@media screen and (max-width: 1138px) {
+
+    #header {
+        height: 75px;
+    }
+
+    .h1 {
+        padding-top: 40px;
+    }
+
+    .p {
+        font-size: x-large;
+    }
+
+    .p3 {
+        margin-left: 50px;
+        width: 52%;
+    }
+
+    .p4 {
+        font-size: x-large;
+        margin-left: 43%;
+    }
+
+    .p5 {
+        margin-top: 20px;
+        font-size: large;
+    }
+
+    .div2 {
+        width: 12%;
+        margin-top: 90px;
+        margin-left: 70px;
+    }
+
+    .div4 {
+        width: 38.5%;
+    }
+
+    .div5 {
+        padding-left: 65.5%;
+        margin-top: -50px;
+    }
+
+    .div6 {
+        height: 750px;
+    }
+
+    .div4 iframe {
+        width: 440px;
+    }
+
+    .div5 iframe {
+        width: 320px;
+        height: 180px;
+    }
+
+}
+
 @media screen and (max-width: 1114px) {
 
     #header {
@@ -619,6 +678,36 @@
 
 }
 
+@media screen and (max-width: 823px) {
+  
+    .p4 {
+        width: 70%;
+        margin-left: 30%;
+    }
+
+    .div4 {
+       margin-left: 18%;
+       width: 52%;
+    }
+
+    .div5 {
+        padding-left: 30%;
+        margin-top: 22%;
+    }
+
+    .div6 {
+        width: 52%;
+        height: 660px;
+        margin-left: 24%;
+        margin-top: 110%;
+    }
+
+    .div7 {
+        margin-top: 45%;
+    }
+
+}
+
 @media screen and (max-width: 820px) {
 
     .p4 {
@@ -641,6 +730,39 @@
     .div6 {
         width: 52%;
         height: 685px;
+        margin-left: 25%;
+        margin-top: 105%;
+    }
+
+    .div7 {
+        margin-left: 20%;
+    }
+
+}
+
+@media screen and (max-width: 800px) {
+
+    .p4 {
+        margin-left: 7%;
+    }
+
+    .div2 {
+        width: 17%;
+    }
+
+    .div4 {
+        width: 58%;
+        margin-left: 9.5%;
+    }
+
+    .div5 {
+        padding-left: 30%;
+        margin-top: 22%;
+    }
+
+    .div6 {
+        width: 52%;
+        height: 715px;
         margin-left: 25%;
         margin-top: 105%;
     }
@@ -711,7 +833,7 @@
 
     .p4 {
         width: 100%;
-        margin-left: 35%;
+        margin-left: 10%;
     }
 
     .div2 {
@@ -720,20 +842,20 @@
         margin-left: 50px;
     }
 
+    .div4 {
+        width: 70%;
+    }
+
     .div5 {
         padding-left: 27%;
         margin-top: 200px;
-    }
-
-    .div4 {
-        width: 55%;
     }
 
     .div6 {
         width: 70%;
         height: 570px;
         margin-left: 15%;
-        margin-top: 104%;
+        margin-top: 115%;
     }
 
     .div7 {
@@ -777,6 +899,57 @@
 
     .div4 {
         width: 70%;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 600px;
+        margin-left: 15%;
+        margin-top: 125%;
+    }
+
+    .div7 {
+        margin-top: 390px;
+        margin-left: 105px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 717px) {
+
+    .p3 {
+        margin-left: 20px;
+        width: 80%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 11%;
+    }
+
+    .div2 {
+        width: 20%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div5 {
+        padding-left: 27%;
+        margin-top: 250px;
+    }
+
+    .div4 {
+        width: 70%;
+        margin-left: 7%;
     }
 
     .div6 {
@@ -853,6 +1026,210 @@
 
 }
 
+@media screen and (max-width: 658px) {
+
+    .p3 {
+        margin-left: 10px;
+        width: 90%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 12%;
+    }
+
+    .div2 {
+        width: 22%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div5 {
+        padding-left: 25%;
+        margin-top: 200px;
+    }
+
+    .div4 {
+        width: 70%;
+        margin-left: 35px;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 655px;
+        margin-left: 15%;
+        margin-top: 128%;
+    }
+
+    .div7 {
+        margin-top: 335px;
+        margin-left: 100px;
+    }
+
+    .div4 iframe {
+        width: 395px;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 653px) {
+
+    .p3 {
+        margin-left: 10px;
+        width: 90%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 12%;
+    }
+
+    .div2 {
+        width: 22%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div5 {
+        padding-left: 25%;
+        margin-top: 200px;
+    }
+
+    .div4 {
+        width: 70%;
+        margin-left: 35px;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 655px;
+        margin-left: 15%;
+        margin-top: 130%;
+    }
+
+    .div7 {
+        margin-top: 335px;
+        margin-left: 100px;
+    }
+
+    .div4 iframe {
+        width: 395px;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 640px) {
+
+    .p3 {
+        margin-left: 10px;
+        width: 90%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 12%;
+    }
+
+    .div2 {
+        width: 22%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div5 {
+        padding-left: 25%;
+        margin-top: 230px;
+    }
+
+    .div4 {
+        width: 70%;
+        margin-left: 35px;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 655px;
+        margin-left: 15%;
+        margin-top: 130%;
+    }
+
+    .div7 {
+        margin-top: 335px;
+        margin-left: 100px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+    .p3 {
+        margin-left: 10px;
+        width: 90%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 12%;
+    }
+
+    .div2 {
+        width: 24%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div4 {
+        width: 75%;
+        margin-left: 16px;
+    }
+
+    .div5 {
+        padding-left: 20%;
+        margin-top: 230px;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 685px;
+        margin-left: 15%;
+        margin-top: 140%;
+    }
+
+    .div7 {
+        margin-top: 335px;
+        margin-left: 100px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
 @media screen and (max-width: 540px) {
 
     .p3 {
@@ -884,6 +1261,57 @@
     .div6 {
         width: 70%;
         height: 735px;
+        margin-left: 15%;
+        margin-top: 170%;
+    }
+
+    .div7 {
+        margin-top: 400px;
+        margin-left: 50px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 350px;
+        height: 200px;
+    }
+
+}
+
+@media screen and (max-width: 512px) {
+
+    .p3 {
+        margin-left: 10px;
+        width: 90%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 15%;
+    }
+
+    .div2 {
+        width: 26%;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+
+    .div5 {
+        padding-left: 18%;
+        margin-top: 280px;
+    }
+
+    .div4 {
+        width: 70%;
+        margin-left: 45px;
+    }
+
+    .div6 {
+        width: 70%;
+        height: 760px;
         margin-left: 15%;
         margin-top: 170%;
     }
@@ -1124,6 +1552,66 @@
 
 }
 
+@media screen and (max-width: 384px) {
+
+    .p3 {
+        margin-left: -10px;
+        width: 90%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 34%;
+    }
+
+    .p5 {
+        margin-left: 5%;
+    }
+
+    .div2 {
+        width: 34%;
+        margin-top: 30px;
+        margin-left: 30px;
+    }
+
+    .div3 {
+        width: 100%;
+        margin-left: -40%;
+    }
+
+    .div4 {
+        width: 85%;
+        margin-left: 0.5%;
+    }
+
+    .div5 {
+        padding-left: 8%;
+        margin-top: 345px;
+    }
+
+    .div6 {
+        width: 78%;
+        height: 870px;
+        margin-left: 11%;
+        margin-top: 218%;
+    }
+
+    .div7 {
+        margin-top: 335px;
+        margin-left: 46px;
+    }
+
+    .div4 iframe {
+        width: 100%;
+    }
+
+    .div5 iframe {
+        width: 330px;
+        height: 180px;
+    }
+
+}
+
 @media screen and (max-width: 375px) {
 
     .p3 {
@@ -1225,7 +1713,7 @@
         width: 78%;
         height: 890px;
         margin-left: 12%;
-        margin-top: 200%;
+        margin-top: 215%;
     }
 
     .div7 {
@@ -1295,6 +1783,70 @@
 
     .div4 iframe {
         width: 255px;
+    }
+
+    .div5 iframe {
+        width: 280px;
+        height: 150px;
+    }
+
+}
+
+@media screen and (max-width: 280px) {
+
+    .p {
+        font-size: larger;
+    }
+    
+    .p3 {
+        margin-left: -25px;
+        width: 95%;
+    }
+
+    .p4 {
+        width: 100%;
+        margin-left: 35%;
+    }
+
+    .p5 {
+        margin-left: 5%;
+    }
+
+    .div2 {
+        width: 49%;
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+    .div3 {
+        width: 100%;
+        margin-left: -40%;
+    }
+
+    .div4 {
+        width: 98%;
+        margin-left: -5%;
+    }
+
+    .div5 {
+        padding-left: 0%;
+        margin-top: 470px;
+    }
+
+    .div6 {
+        width: 90%;
+        height: 1030px;
+        margin-left: 5%;
+        margin-top: 300%;
+    }
+
+    .div7 {
+        margin-top: 290px;
+        margin-left: 30px;
+    }
+
+    .div4 iframe {
+        width: 100%;
     }
 
     .div5 iframe {
