--- a/V2.0/guia.css
+++ b/V2.0/guia.css
@@ -66,10 +66,20 @@
 
 .div5 {
     width: 60%;
-    height: 700px;
+    height: 710px;
     background-color: #b0d973;
     border-radius: 20px;
     margin-top: 45%;
+    margin-left: 20%;
+    box-shadow: 0px 2px 4px 2px gray;
+}
+
+.div6 {
+    width: 60%;
+    height: 785px;
+    background-color: #b0d973;
+    border-radius: 20px;
+    margin-top: 51%;
     margin-left: 20%;
     box-shadow: 0px 2px 4px 2px gray;
 }
